# Rust

./: .gitignore
A_Documentation/: Links  Links_for_Rust.txt  Questions and Answers  doc_hints_de.md  doc_hints_en.md
Day0_About_Me/: Cargo.toml  Task.txt
Day0_About_Me/src/: main.rs
Day0_Ferris_Says/: Cargo.toml
Day0_Ferris_Says/src/: main.rs
Day0_Hello_World/: Cargo.toml
Day0_Your_Name/: Cargo.toml
Day1_Exercise1_Printing/: Cargo.toml
Day1_Exercise1_Printing/src/: main.rs
Day1_Hello-World/: Cargo.toml
Day1_Hello-World/src/: main.rs
Day1_Hello/src/: main.rs
Day1_Min_Max/: Cargo.toml
Day1_Min_Max/src/: main.rs
Day1_Variables/src/: main.rs
Day1_ferris-says/: Cargo.toml
Day1_ferris-says/src/: main.rs
Day2_Guessing_Game/: Cargo.toml
Day2_Guessing_Game/src/: main.rs
